<resources>
    <string name="app_name">Test01</string>
    <string name="text2">activity main 2</string>
    <string name="btn2">t跳转回activity1</string>
    <string name="computer">简单计算器</string>
    <string name="btn_cancel">CE</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiple">×</string>
    <string name="btn_clear">C</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">-</string>
    <string name="btn_sqrt">√￣</string>
    <string name="btn_equal">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_inverse">1/X</string>
    <string name="btn_nine">9</string>
    <string name="btn_eight">8</string>
    <string name="btn_seven">7</string>
    <string name="btn_six">6</string>
    <string name="btn_five">5</string>
    <string name="btn_four">4</string>
    <string name="btn_three">3</string>
    <string name="btn_two">2</string>
    <string name="btn_one">1</string>
    <string name="btn_zero">0</string>
    <string name="btn_save">保存信息</string>
    <string name="btn_delete">删除保存的信息</string>

</resources>