<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:padding="5dp"
    tools:context=".Computer">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:background="@color/gray">
            </TextView>
            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:lines="4"
                android:text="@string/btn_zero"
                android:gravity="bottom|right">
            </TextView>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5">
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_divide"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_multi"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_multiple"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_clear"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_seven"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_eight"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_nine"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_add"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_four"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_five"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_five"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_six"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_subtract"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_subtract"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_one"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_two"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_three"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_sqrt"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_sqrt"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_inverse"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_inverse"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_zero"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_dot"
                    android:textColor="@color/black">
                </Button>
                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="@dimen/btn_height"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_font_size"
                    android:text="@string/btn_equal"
                    android:textColor="@color/black">
                </Button>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>